--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="Icon.png" alt="Allio">
+            <li class="brand"><img src="icon.jpeg" alt="Allio">
             <gm>Allio</gm>
             </li>
             <li><a href="">Home</a></li>
@@ -31,7 +31,7 @@
     <div class="container">
         <h1>Products</h1>
         <div class="products">
-            <img src="icon.png" alt="1">
+            <img src="icon.jpeg" alt="1">
             <a href="" class="btn">See More &#8594</a>
         </div>
     </div>
