--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
             <li><a href="">Categories</a></li>
             <li><a href="">Local</a></li>
-            <li><a href="">Blogs</a></li>
+            <li><a href="/fun_blog_index.html">Blogs</a></li>
             <li><a href="">Ads</a></li>
             <li><a href="">General</a></li>
         </ul>
